--- a/BOSS/.gitignore
+++ b/BOSS/.gitignore
@@ -1,6 +1,7 @@
 VisualStudio/Release
 VisualStudio/Debug
 VisualStudio/ipch
+VisualStudio/.vs
 VisualStudio/*.txt
 VisualStudio/*.vsp
 emscripten/*.js
