--- a/UAlbertaBot/.gitignore
+++ b/UAlbertaBot/.gitignore
@@ -1,4 +1,11 @@
 VisualStudio/Release
 VisualStudio/Debug
-bin/*
+VisualStudio/.vs
+bin/*.dll
+bin/*.exe
+bin/*.map
+bin/*.lib
+bin/*.exp
+bin/*.ilk
+bin/*.pdb
 source/*.o
