--- a/UAlbertaBot/VisualStudio/UAlbertaBot_dll.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot_dll.vcxproj
@@ -11,107 +11,28 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Source\AutoObserver.cpp" />
-    <ClCompile Include="..\Source\BOSSManager.cpp" />
-    <ClCompile Include="..\source\BuildingManager.cpp" />
-    <ClCompile Include="..\source\BuildingPlacer.cpp" />
-    <ClCompile Include="..\source\BuildOrder.cpp" />
-    <ClCompile Include="..\source\BuildOrderQueue.cpp" />
-    <ClCompile Include="..\Source\CombatCommander.cpp" />
-    <ClCompile Include="..\Source\CombatSimulation.cpp" />
-    <ClCompile Include="..\Source\Common.cpp" />
-    <ClCompile Include="..\Source\Config.cpp" />
-    <ClCompile Include="..\Source\DebugTools.cpp" />
-    <ClCompile Include="..\source\DetectorManager.cpp" />
-    <ClCompile Include="..\Source\DistanceMap.cpp" />
-    <ClCompile Include="..\Source\GameCommander.cpp" />
-    <ClCompile Include="..\Source\Global.cpp" />
-    <ClCompile Include="..\Source\InfoManager.cpp" />
-    <ClCompile Include="..\source\JSONTools.cpp" />
-    <ClCompile Include="..\Source\Logger.cpp" />
-    <ClCompile Include="..\Source\main.cpp" />
-    <ClCompile Include="..\Source\MapTools.cpp" />
-    <ClCompile Include="..\Source\MedicManager.cpp" />
-    <ClCompile Include="..\source\MeleeManager.cpp" />
-    <ClCompile Include="..\Source\MetaType.cpp" />
-    <ClCompile Include="..\Source\Micro.cpp" />
-    <ClCompile Include="..\source\MicroManager.cpp" />
-    <ClCompile Include="..\Source\ParseUtils.cpp" />
-    <ClCompile Include="..\source\ProductionManager.cpp" />
-    <ClCompile Include="..\source\RangedManager.cpp" />
-    <ClCompile Include="..\source\ScoutManager.cpp" />
-    <ClCompile Include="..\Source\Squad.cpp" />
-    <ClCompile Include="..\Source\SquadData.cpp" />
-    <ClCompile Include="..\Source\StrategyManager.cpp" />
-    <ClCompile Include="..\Source\TankManager.cpp" />
-    <ClCompile Include="..\source\TransportManager.cpp" />
-    <ClCompile Include="..\Source\UABAssert.cpp" />
-    <ClCompile Include="..\Source\UAlbertaBotModule.cpp" />
-    <ClCompile Include="..\Source\UnitData.cpp" />
-    <ClCompile Include="..\Source\UnitUtil.cpp" />
-    <ClCompile Include="..\source\WorkerData.cpp" />
-    <ClCompile Include="..\source\WorkerManager.cpp" />
+    <ClCompile Include="..\Source\Dll_Arena.cpp" />
+    <ClCompile Include="..\Source\UAlbertaBotModule_dll.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Source\AutoObserver.h" />
-    <ClInclude Include="..\Source\BOSSManager.h" />
-    <ClInclude Include="..\source\BuildingManager.h" />
-    <ClInclude Include="..\source\BuildingPlacer.h" />
-    <ClInclude Include="..\source\BuildOrder.h" />
-    <ClInclude Include="..\source\BuildOrderQueue.h" />
-    <ClInclude Include="..\Source\CombatCommander.h" />
-    <ClInclude Include="..\Source\CombatSimulation.h" />
-    <ClInclude Include="..\Source\Common.h" />
-    <ClInclude Include="..\Source\Config.h" />
-    <ClInclude Include="..\Source\DebugTools.h" />
-    <ClInclude Include="..\source\DetectorManager.h" />
-    <ClInclude Include="..\Source\DistanceMap.h" />
-    <ClInclude Include="..\Source\GameCommander.h" />
-    <ClInclude Include="..\Source\GameHistory.hpp" />
-    <ClInclude Include="..\Source\Global.h" />
-    <ClInclude Include="..\Source\InfoManager.h" />
-    <ClInclude Include="..\source\JSONTools.h" />
-    <ClInclude Include="..\Source\Logger.h" />
-    <ClInclude Include="..\Source\MapTools.h" />
-    <ClInclude Include="..\Source\MedicManager.h" />
-    <ClInclude Include="..\source\MeleeManager.h" />
-    <ClInclude Include="..\source\MetaType.h" />
-    <ClInclude Include="..\Source\Micro.h" />
-    <ClInclude Include="..\source\MicroManager.h" />
-    <ClInclude Include="..\Source\ParseUtils.h" />
-    <ClInclude Include="..\source\ProductionManager.h" />
-    <ClInclude Include="..\source\RangedManager.h" />
-    <ClInclude Include="..\source\ScoutManager.h" />
-    <ClInclude Include="..\Source\Squad.h" />
-    <ClInclude Include="..\Source\SquadData.h" />
-    <ClInclude Include="..\Source\SquadOrder.h" />
-    <ClInclude Include="..\Source\StrategyManager.h" />
-    <ClInclude Include="..\Source\TankManager.h" />
-    <ClInclude Include="..\Source\Timer.hpp" />
-    <ClInclude Include="..\source\TransportManager.h" />
-    <ClInclude Include="..\Source\UABAssert.h" />
-    <ClInclude Include="..\Source\UAlbertaBotModule.h" />
-    <ClInclude Include="..\Source\UnitData.h" />
-    <ClInclude Include="..\Source\UnitUtil.h" />
-    <ClInclude Include="..\source\WorkerData.h" />
-    <ClInclude Include="..\source\WorkerManager.h" />
+    <ClInclude Include="..\Source\UAlbertaBotModule_dll.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectName>UAlbertaBot</ProjectName>
-    <ProjectGuid>{572AF06A-4078-4C5A-ABCE-B29C84050E6D}</ProjectGuid>
+    <ProjectName>UAlbertaBot_dll</ProjectName>
+    <ProjectGuid>{82F37540-2170-4174-9E7A-CCF3F00515CE}</ProjectGuid>
     <RootNamespace>ExampleAIModule</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <PlatformToolset>v120</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>false</WholeProgramOptimization>
@@ -138,7 +59,7 @@
     <CodeAnalysisRuleSet Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRules Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
     <CodeAnalysisRuleAssemblies Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
-    <CodeAnalysisRuleSet Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">BasicDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRules Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
     <CodeAnalysisRuleAssemblies Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
     <RunCodeAnalysis Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</RunCodeAnalysis>
@@ -161,9 +82,9 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>$(BWAPI_DIR)/lib/BWAPId.lib;$(BWAPI_DIR)/lib/BWAPIClientd.lib;$(Configuration)/SparCraft/SparCraft_d.lib;../../BOSS/bin/BOSS_d.lib;$(BWTA_DIR)/lib/BWTAd.lib;$(BWTA_DIR)/lib/libboost_system-vc120-mt-gd-1_56.lib;$(BWTA_DIR)/lib/libboost_thread-vc120-mt-gd-1_56.lib;$(BWTA_DIR)/lib/libCGAL-vc120-mt-gd-4.4.lib;$(BWTA_DIR)/lib/libgmp-10.lib;$(BWTA_DIR)/lib/libmpfr-4.lib;$(BWTA_DIR)/lib/libboost_filesystem-vc120-mt-gd-1_56.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(BWAPI_DIR)/lib/BWAPId.lib;$(Configuration)/SparCraft/SparCraft_d.lib;../../BOSS/bin/BOSS_d.lib;../bin/UAlbertaBot_lib_d.lib;$(BWTA_DIR)/lib/BWTAd.lib;$(BWTA_DIR)/lib/libboost_system-vc120-mt-gd-1_56.lib;$(BWTA_DIR)/lib/libboost_thread-vc120-mt-gd-1_56.lib;$(BWTA_DIR)/lib/libCGAL-vc120-mt-gd-4.4.lib;$(BWTA_DIR)/lib/libgmp-10.lib;$(BWTA_DIR)/lib/libmpfr-4.lib;$(BWTA_DIR)/lib/libboost_filesystem-vc120-mt-gd-1_56.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
   </ItemDefinitionGroup>
@@ -190,9 +111,9 @@
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
     <Link>
-      <AdditionalDependencies>$(BWAPI_DIR)/lib/BWAPI.lib;$(BWAPI_DIR)/lib/BWAPIClient.lib;$(Configuration)/SparCraft/SparCraft.lib;../../BOSS/bin/BOSS.lib;$(BWTA_DIR)/lib/BWTA.lib;$(BWTA_DIR)/lib/libboost_system-vc120-mt-1_56.lib;$(BWTA_DIR)/lib/libboost_thread-vc120-mt-1_56.lib;$(BWTA_DIR)/lib/libCGAL-vc120-mt-4.4.lib;$(BWTA_DIR)/lib/libgmp-10.lib;$(BWTA_DIR)/lib/libmpfr-4.lib;$(BWTA_DIR)/lib/libboost_filesystem-vc120-mt-1_56.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(BWAPI_DIR)/lib/BWAPI.lib;$(Configuration)/SparCraft/SparCraft.lib;../../BOSS/bin/BOSS.lib;../bin/UAlbertaBot_lib.lib;$(BWTA_DIR)/lib/BWTA.lib;$(BWTA_DIR)/lib/libboost_system-vc120-mt-1_56.lib;$(BWTA_DIR)/lib/libboost_thread-vc120-mt-1_56.lib;$(BWTA_DIR)/lib/libCGAL-vc120-mt-4.4.lib;$(BWTA_DIR)/lib/libgmp-10.lib;$(BWTA_DIR)/lib/libmpfr-4.lib;$(BWTA_DIR)/lib/libboost_filesystem-vc120-mt-1_56.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
