--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -17,9 +17,6 @@
     <ClCompile Include="..\Source\Global.cpp">
       <Filter>global</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\InfoManager.cpp">
-      <Filter>global</Filter>
-    </ClCompile>
     <ClCompile Include="..\Source\StrategyManager.cpp">
       <Filter>global</Filter>
     </ClCompile>
@@ -115,6 +112,15 @@
     </ClCompile>
     <ClCompile Include="..\Source\GameCommander.cpp" />
     <ClCompile Include="..\Source\UAlbertaBotModule.cpp" />
+    <ClCompile Include="..\Source\BaseLocation.cpp">
+      <Filter>map</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\BaseLocationManager.cpp">
+      <Filter>map</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\UnitInfoManager.cpp">
+      <Filter>global</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -150,9 +156,6 @@
       <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Global.h">
-      <Filter>global</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\InfoManager.h">
       <Filter>global</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\StrategyManager.h">
@@ -259,5 +262,14 @@
     </ClInclude>
     <ClInclude Include="..\Source\GameCommander.h" />
     <ClInclude Include="..\Source\UAlbertaBotModule.h" />
+    <ClInclude Include="..\Source\BaseLocation.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\BaseLocationManager.h">
+      <Filter>map</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\UnitInfoManager.h">
+      <Filter>global</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
