--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -111,7 +111,6 @@
       <Filter>util</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\GameCommander.cpp" />
-    <ClCompile Include="..\Source\UAlbertaBotModule.cpp" />
     <ClCompile Include="..\Source\BaseLocation.cpp">
       <Filter>map</Filter>
     </ClCompile>
@@ -121,6 +120,9 @@
     <ClCompile Include="..\Source\BaseLocationManager.cpp">
       <Filter>global</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\BotModule.cpp" />
+    <ClCompile Include="..\Source\UAlbertaBot_Arena.cpp" />
+    <ClCompile Include="..\Source\UAlbertaBot_Tournament.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -261,7 +263,6 @@
       <Filter>util</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\GameCommander.h" />
-    <ClInclude Include="..\Source\UAlbertaBotModule.h" />
     <ClInclude Include="..\Source\BaseLocation.h">
       <Filter>map</Filter>
     </ClInclude>
@@ -271,5 +272,8 @@
     <ClInclude Include="..\Source\BaseLocationManager.h">
       <Filter>global</Filter>
     </ClInclude>
+    <ClInclude Include="..\Source\BotModule.h" />
+    <ClInclude Include="..\Source\UAlbertaBot_Arena.h" />
+    <ClInclude Include="..\Source\UAlbertaBot_Tournament.h" />
   </ItemGroup>
 </Project>
