uab now has exe or dll output

--- a/BOSS/VisualStudio/BOSS.vcxproj
+++ b/BOSS/VisualStudio/BOSS.vcxproj
@@ -122,7 +122,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>../bin/</OutDir>
+    <OutDir>$(SolutionDir)\$(Configuration)\$(ProjectName)\</OutDir>
     <TargetName>$(ProjectName)_d</TargetName>
     <TargetExt>.lib</TargetExt>
     <IntDir>$(SolutionDir)\$(Configuration)\$(ProjectName)\</IntDir>
