Refactor AI to support workgin agains multiple players

--- a/UAlbertaBot/VisualStudio/UAlbertaBot_exe.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot_exe.vcxproj
@@ -106,6 +106,7 @@
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
+      <AdditionalOptions>/await %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
