Make bot compile using VS2013 to be able submit it using version supported by SSCAIT

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ BOSS/VisualStudio/BOSS.VC.db
 *.ipdb
 *.iobj
 UAlbertaBot/bin/UAlbertaBot.iobj
+/UAlbertaBot/VisualStudio/Debug_SSCAIT
+/UAlbertaBot/VisualStudio/Release_SSCAIT
