Remove /await switch for VS2013 build

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ BOSS/VisualStudio/BOSS.VC.db
 UAlbertaBot/bin/UAlbertaBot.iobj
 /UAlbertaBot/VisualStudio/Debug_SSCAIT
 /UAlbertaBot/VisualStudio/Release_SSCAIT
+/SparCraft/bin/test
