Use notifications for communication about changes in the squad Hopefully this gives me idea how to test whole process.

--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="..\Source\ScreenCanvas.h" />
     <ClInclude Include="..\Source\UAlbertaBot_Arena.h" />
     <ClInclude Include="..\Source\UAlbertaBot_Tournament.h" />
+    <ClInclude Include="..\Source\UnitHandler.h" />
     <ClInclude Include="..\Source\UnitInfoManager.h" />
     <ClInclude Include="..\source\JSONTools.h" />
     <ClInclude Include="..\Source\Logger.h" />
