--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -307,5 +307,8 @@
     <ClInclude Include="..\Source\ScreenCanvas.h">
       <Filter>util</Filter>
     </ClInclude>
+    <ClInclude Include="..\Source\UnitHandler.h">
+      <Filter>util</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
